--- a/wp-content/uploads/elementor/css/post-11.css
+++ b/wp-content/uploads/elementor/css/post-11.css
@@ -309,7 +309,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
     background-color: #181818;
     border-style: solid;
     border-width: 1px 1px 1px 1px;
-    border-color: #FFC607;
+    border-color: purple;
     border-radius: 10px 10px 10px 10px;
 }
 
@@ -525,7 +525,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
     background-image: linear-gradient(296deg, var( --e-global-color-c085f8e) 0%, #f2295b 100%);
     border-style: solid;
     border-width: 1px 1px 1px 1px;
-    border-color: #FFC607;
+    border-color: purple;
     border-radius: 5px 5px 0px 0px;
 }
 
@@ -923,7 +923,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
     border-width: 0px 0px 0px 0px;
     border-color: var( --e-global-color-astglobalcolor5);
     border-radius: 10px 10px 10px 10px;
-    box-shadow: -1px 1px 0px 2px #FFC607;
+    box-shadow: -1px 1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-8ad6b3f {
@@ -934,7 +934,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
 }
 
 .elementor-11 .elementor-element.elementor-element-8ad6b3f:hover .elementor-widget-container {
-    box-shadow: 1px -1px 0px 2px #FFC607;
+    box-shadow: 1px -1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-3d6753e {
@@ -991,7 +991,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
     border-width: 0px 0px 0px 0px;
     border-color: var( --e-global-color-astglobalcolor5);
     border-radius: 10px 10px 10px 10px;
-    box-shadow: -1px 1px 0px 2px #FFC607;
+    box-shadow: -1px 1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-021c6c7 {
@@ -1002,7 +1002,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
 }
 
 .elementor-11 .elementor-element.elementor-element-021c6c7:hover .elementor-widget-container {
-    box-shadow: 1px -1px 0px 2px #FFC607;
+    box-shadow: 1px -1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-6f6c9b0 {
@@ -1049,7 +1049,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
     border-width: 0px 0px 0px 0px;
     border-color: var( --e-global-color-astglobalcolor5);
     border-radius: 10px 10px 10px 10px;
-    box-shadow: -1px 1px 0px 2px #FFC607;
+    box-shadow: -1px 1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-709f323 {
@@ -1060,7 +1060,7 @@ body:not(.rtl) .elementor-11 .elementor-element.elementor-element-ea3c9ee .eleme
 }
 
 .elementor-11 .elementor-element.elementor-element-709f323:hover .elementor-widget-container {
-    box-shadow: 1px -1px 0px 2px #FFC607;
+    box-shadow: 1px -1px 0px 2px purple;
 }
 
 .elementor-11 .elementor-element.elementor-element-936c832:not(.elementor-motion-effects-element-type-background),
