--- a/wp-content/uploads/elementor/css/post-19.css
+++ b/wp-content/uploads/elementor/css/post-19.css
@@ -14,7 +14,7 @@
 
 .elementor-19 .elementor-element.elementor-element-459bfa3:not(.elementor-motion-effects-element-type-background),
 .elementor-19 .elementor-element.elementor-element-459bfa3>.elementor-motion-effects-container>.elementor-motion-effects-layer {
-    background-color: #959595;
+    background-color: #222222;
 }
 
 .elementor-19 .elementor-element.elementor-element-459bfa3,
@@ -186,12 +186,12 @@
     fill: var( --e-global-color-astglobalcolor5);
     color: var( --e-global-color-astglobalcolor5);
     background-color: transparent;
-    background-image: linear-gradient(296deg, #FFC607 0%, var( --e-global-color-astglobalcolor8) 100%);
+    background-image: linear-gradient(296deg, purple 0%, var( --e-global-color-astglobalcolor8) 100%);
     border-style: solid;
     border-width: 2px 2px 0px 0px;
     border-color: var( --e-global-color-astglobalcolor5);
     border-radius: 10px 0px 10px 0px;
-    box-shadow: -2px 2px 0px 0px #FFC607;
+    box-shadow: -2px 2px 0px 0px purple;
     padding: 7px 0px 7px 0px;
 }
 
